--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Courier New", Courier, monospace;
   background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
 }
 
